<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/contact_list_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:scrollbars="vertical"
        app:layout_behavior="@string/searchbar_scrolling_view_behavior"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="false"
        app:liftOnScrollColor="@android:color/transparent">
        <com.google.android.material.search.SearchBar
            android:id="@+id/contact_list_search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:hint="@string/contact_list_search_hint"
            app:defaultMarginsEnabled="false"/>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/contact_list_selection_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorSurfaceContainer"
        app:title="@string/contact_list_selection_title"
        app:navigationIcon="@drawable/close_24"
        app:navigationContentDescription="@string/contact_list_selection_close"
        app:menu="@menu/contact_list_selection"
        android:visibility="gone"/>

    <org.singularux.contacts.feature.contactlist.ui.util.ContactListStatusBarScrim
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?attr/colorSurface"
        android:alpha="0.75"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/contact_list_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="bottom|end"
        android:text="@string/contact_list_new_contact"
        app:icon="@drawable/add_24"
        tools:ignore="ClassNameCheck,VisualLintOverlap"/>

    <com.google.android.material.search.SearchView
        android:id="@+id/contact_list_search_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/contact_list_search_hint"
        app:layout_anchor="@id/contact_list_search_bar">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/contact_list_search_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
    </com.google.android.material.search.SearchView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>